--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "build": "webpack --config ./bundler/webpack.prod.js",
     "start": "webpack serve --config ./bundler/webpack.dev.js"
   },
+  "homepage":"https://silv2107.github.io/solarSystem-3D",
+  "name": "solarSystem"
   "dependencies": {
     "@babel/core": "^7.13.1",
     "@babel/preset-env": "^7.13.5",
